resources/app-sre/uhc-staging/gateway-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: gateway-server
  namespace: uhc-staging
spec:
  host: api.stage.openshift.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway-server
    weight: 100
