resources/app-sre/uhc-staging/portal-redirector.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portal-redirector
  namespace: uhc-staging
spec:
  host: cloud.stage.openshift.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: portal-redirector
    weight: 100
